data/derived/fa15/progs/unify/prog0312.ml.out
Characters 214-224:
  | (carry, digits),(fst,sec) -> if (sec = 1) then (1, digits @ (fst, sec)) else (0, digits @ (fst, sec)) in
                                                                ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
